# robo_adversarial_learning_kit

./: README.md  pyproject.toml  requirements.txt  test_basic_functionality.py  test_core_only.py
.claude/epics/vlm-adversarial-patch-finder/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  1-analysis.md  10-analysis.md  10.md  11.md  2.md  3-analysis.md  3.md  4.md  5-analysis.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/epics/vlm-adversarial-patch-finder/updates/1/: stream-A.md
.claude/epics/vlm-adversarial-patch-finder/updates/10/: stream-A.md  stream-B.md
.claude/epics/vlm-adversarial-patch-finder/updates/3/: stream-A.md  stream-B.md
.claude/epics/vlm-adversarial-patch-finder/updates/5/: stream-A.md  stream-B.md
.claude/prds/: vlm-adversarial-patch-finder.md
config/: model_config.yaml  test_config.yaml
src/: __init__.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/losses/: __init__.py  base.py  composite.py  factory.py  non_targeted.py  targeted.py
src/models/: __init__.py  gemma_vlm.py  vlm_loader.py
src/utils/: __init__.py  image_utils.py  memory_utils.py
tests/: __init__.py  test_composite_loss.py  test_data_pipeline.py  test_dataset.py  test_environment.py  test_inference.py  test_loss_base.py  test_model_setup.py  test_models.py  test_non_targeted_loss.py  test_preprocessing.py  test_targeted_loss.py
